# mudbrick

./: .env.example  .gitignore  AUTOMATED-TEST-INVENTORY.md  CHANGELOG.md  COMMON-PDF-EDITOR-BACKLOG.md  FEATURE-PROMPT.md  IMPLEMENTATION-PLAN.md  INTEGRATION.md  MIGRATION-GUIDE.md  PARALLEL-TASKS.md  PERFORMANCE-BASELINE.md  PRE7-GATE-STATUS.md  QA-MATRIX.md  RELEASE-CHECKLIST.md  UI-COMPONENT-MAP.md  UI-INTERACTION-MATRIX.md  UI-SHELL-SPEC.md  architecture-blueprint.md  audit-report.md  dbissues.md  eslint.config.js  index.html  mudbrick-plan-v2.md  package.json  remediationPlan.md  sw.js  tech-lead-review.md  vercel.json
.claude/: launch.json
.github/workflows/: test.yml
apps/api/: requirements.txt
apps/api/app/: config.py  dependencies.py  main.py
apps/api/tests/: conftest.py  (+14 more)
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  vitest.config.mjs
js/: annotations.js  app.js  bates.js  comment-summary.js  comments.js  doc-compare.js  doc-history.js  error-handler.js  exhibit-stamps.js  export-image.js  export.js  find.js  form-creator.js  forms.js  headers.js  history.js  icons.js  image-editor.js  integration.js  links.js  menu-actions.js  ocr.js  onboarding.js  page-labels.js  pdf-edit.js  pdf-engine.js  redact-patterns.js  security.js  signatures.js  text-edit.js  utils.js
scripts/: dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
styles/: components.css  layout.css  variables.css
tests/: doc-history.test.js  integration.test.js  onboarding.test.js  setup.js
(+93 files in other folders)
